# Ohmatic

./: .gitattributes  .gitignore  CANARY.md  CHANGELOG.md  CITATION.cff  COMMERCIAL.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  LICENSE  Makefile  README.md  TESTING.md  __init__.py  conftest.py  docker-compose.yml  ohmatic  ohmatic.cmd  ohmatic.ps1  pyproject.toml  requirements.txt  schema.md  test_integration.py
dataset/: __init__.py  component_cards.py  examples.json  validate.py
docs/: architecture.md
enricher/: Cargo.toml
eval/: __init__.py  diagnostic_rules.py  diagnostics.py  error_taxonomy.json
exporter/: __init__.py
frontend/: dev_server.py  ecosystem.config.cjs  index.html  package-lock.json  package.json  vite.config.ts
gateway/: Cargo.toml
inference/: __init__.py  cli.py  model.py  pipeline.py  qwen_chat.py  t5_normalizer.py  t5_subprocess.py  vllm_backend.py
shared/: erc_feedback.py  parts_list.py  procurement.py  prompt_builder.py  t5_normalizer.py
shared/ohmatic-types/: Cargo.toml
shared/ohmatic-types/src/: circuit.rs  lib.rs
shared/ohmatic-types/tests/: schema_roundtrip.rs
site/: affiliate-disclosure.html  fonts.css  index.html  privacy.html  sitemap.xml  styles.css
ui/: app.py  (+1 more)
verifier/: Cargo.toml
verifier/config/: component_registry.toml  erc_rules_catalog.json
verifier/src/: config.rs  lib.rs  main.rs
verifier/src/drc/: collision.rs  corrector.rs  electrical_rules.rs  mod.rs  rule_ids.rs  schema_rules.rs  spatial_hash.rs
verifier/stub/: server.py
verifier/tests/: authored_teacher_erc.rs  integration_tests.rs
(+183 files in other folders)
