[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "verifier"
path = "src/main.rs"

[lib]
name = "verifier"
path = "src/lib.rs"

[dependencies]
ohmatic-types = { path = "../shared/ohmatic-types" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"

[dev-dependencies]
axum-test = "15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
